# file-encryption-rust

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: crypto.rs  format.rs  lib.rs
file_encryptor/: Cargo.toml  README.md
file_encryptor/src/: cli.rs  file_handler.rs  main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web_app/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
web_app/src/: App.tsx  index.css
web_app/src/pkg/: file_encryptor_wasm.d.ts  file_encryptor_wasm.js  file_encryptor_wasm_bg.wasm  file_encryptor_wasm_bg.wasm.d.ts  package.json
