[package]
name = "file_encryptor"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rpassword = "7.2"
hex = "0.4"
zeroize = { version = "1.6", features = ["derive"] }
indicatif = "0.17"
walkdir = "2"
encryptor_core = { path = "../core" }